registry/argocd-install/argocd-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
    host: argocd.saap.dev
  tls:
  - hosts:
      - argocd.saap.dev
    secretName: argocd-saap-tls
